feat(PetsController): Add pet feeding and low field checker
